--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "lucide-react": "^0.562.0",
     "next": "^15.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "recharts": "^3.6.0",
-    "@google/genai": "^1.34.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
-    "typescript": "^5.7.3",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3"
+    "@types/react-dom": "^19.0.3",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.7.3"
   }
 }
