feat: Multi-Year support - Year selector, API sync by sheet

--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,4 @@ APP_SECRET=dummy-secret
 GEMINI_API_KEY=dummy-key
 NEXT_PUBLIC_SUPABASE_URL=https://example.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=dummy-key
+APPS_SCRIPT_URL=https://script.google.com/macros/s/AKfycbyhjCw16RNJkkDpjdogjtj6fTY9xLJZfu_zx50kBF9xTat6qFCSzmJh1nXu52-VcTUG/exec
